# tcurses

./: .gitignore  README.md  example.py  main.py  pyproject.toml  todo.txt  wrap_tkinter.py
src/: example.py  wrap.py
src/tcurses/: __init__.py  __init__.pyi
src/tcurses.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
