[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcurses"
version = "0.0.9"
authors = [
  { name="Gabriel Natenshon", email="gnatenshon@gmail.com" },
]
description = "A Tkinter interface that feels like programming in curses"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mecaneer23/tcurses"
"Bug Tracker" = "https://github.com/mecaneer23/tcurses/issues"